--- a/src/docs/asciidoc/road-to-immutability/060-eventual.adoc
+++ b/src/docs/asciidoc/road-to-immutability/060-eventual.adoc
@@ -1,7 +1,8 @@
 [#eventual-immutability]
 == Eventual immutability
 
-In this section we explore types which follow a two-phase life cycle: the start off as mutable, then somehow become immutable.
+In this section we explore types which follow a two-phase life cycle: the start off as mutable, then somehow become
+immutable.
 
 === Builders
 
@@ -50,13 +51,17 @@ class Polygon {
 }
 ----
 
-<1> The private constructor combined with the construction of an immutable copy in the `build` method guarantees immutability.
+<1> The private constructor combined with the construction of an immutable copy in the `build` method guarantees
+immutability.
 
-If your code can live with two different types (`Polygon.Builder`, `Polygon`) to represent polygons in their different stages (mutable, immutable), the builder paradigm is great.
-If, on the other hand, you want to hold polygons in a type that spans both stages of the polygon lifecycle, it becomes difficult to do this with an eye on immutability.
+If your code can live with two different types (`Polygon.Builder`, `Polygon`) to represent polygons in their different
+stages (mutable, immutable), the builder paradigm is great.
+If, on the other hand, you want to hold polygons in a type that spans both stages of the polygon lifecycle, it becomes
+difficult to do this with an eye on immutability.
 One solution is the use of an interface that is implemented both by the builder and the immutable type.
 
-The <<support-firstthen>> type can also assist in this situation: it holds an initial object (the _first_) until a state change occurs, and it is forced to hold a second object (the _then_).
+The <<support-firstthen>> type can also assist in this situation: it holds an initial object (the _first_) until a
+state change occurs, and it is forced to hold a second object (the _then_).
 Once it is in the final state, it cannot change anymore.
 It is _eventually immutable_:
 
@@ -127,7 +132,8 @@ class SimpleImmutableSet1<T> {
 
 <1> These methods can be called any time.
 
-The analyser has no problem detecting the presence of preconditions, and observing that one method changes its own precondition.
+The analyser has no problem detecting the presence of preconditions, and observing that one method changes its own
+precondition.
 The rules, however, are sufficiently general to support arbitrary preconditions, as shown in the following variant.
 This example does not require an additional field, but relies on the empty/not-empty state change:
 
@@ -165,17 +171,23 @@ class SimpleImmutableSet2<T> {
 Let us summarize the annotations:
 
 * The {mark} annotation marks methods that change the state from _before_ to _after_.
-* The {only} annotation identifies methods that, because of their precondition, can only be executed without raising an exception before (when complemented with a `before="..."` parameter) or after (with a `after="..."` parameter) the transition.
+* The {only} annotation identifies methods that, because of their precondition, can only be executed without raising
+an exception before (when complemented with a `before="..."` parameter) or after (with a `after="..."` parameter)
+the transition.
 * The analyser computes the {testMark} annotation on methods which return the state as a boolean.
-There is a parameter to indicate that instead of returning `true` when the object is _after_, the method actually returns `true` on _before_.
-* Finally, the eventuality of the type shows in the `after="..."` parameter of {finalFields}, {immutable} or the shorthand {immutableContainer}.
+There is a parameter to indicate that instead of returning `true` when the object is _after_, the method actually
+returns `true` on _before_.
+* Finally, the eventuality of the type shows in the `after="..."` parameter of {finalFields}, {immutable} or the
+shorthand {immutableContainer}.
 
-In each of these annotations, the actual value of the `...` in the `after=` or `before=` parameters is the name of the field.
+In each of these annotations, the actual value of the `...` in the `after=` or `before=` parameters is the name of the
+field.
 
 In case there are multiple fields involved, their names are represented in a comma-separated fashion.
 
-The {mark} and {only} annotations can also be assigned to parameters, in the event that marked methods are called on a parameter of eventually immutable type.
-Consider the following utility method for <<support-eventuallyfinal>>, frequently used in the analyser:
+The {mark} and {only} annotations can also be assigned to parameters, in the event that marked methods are called
+on a parameter of eventually immutable type.
+Consider the following utility method for <<support-eventuallyfinal>>, frequently used in the analyser's own code:
 
 .Example {counter:example}, utility method for `EventuallyFinal`
 [source,java]
@@ -188,16 +200,20 @@ public static <T> void setFinalAllowEquals(
 }
 ----
 
-Here, the `setFinal` method's {mark} annotation travels to the parameter, where it is applied to the argument each time the static method is applied.
+Here, the `setFinal` method's {mark} annotation travels to the parameter, where it is applied to the argument each
+time the static method is applied.
 
 === Propagation
 
-The support types detailed in <<support-classes>> can be used as building blocks to make ever more complex eventually immutable classes.
-Effectively final fields of eventually immutable type will at some point hold objects that are in their final or `after` state, in which case they act as immutable fields.
+The support types detailed in <<support-classes>> can be used as building blocks to make ever more complex eventually
+immutable classes.
+Effectively final fields of eventually immutable type will at some point hold objects that are in their final or `after`
+state, in which case they act as immutable fields.
 
 The analyser itself consists of many eventually immutable classes; we show some examples in <<in-the-analyser>>.
 
-IMPORTANT: For everyday use of eventual immutability, this is probably the most important consequence of all definitions up to now.
+IMPORTANT: For everyday use of eventual immutability, this is probably the most important consequence of all definitions
+up to now.
 
 === Before the mark
 
@@ -214,56 +230,63 @@ public SimpleImmutableSet1 create() {
 }
 ----
 
-Similarly, the analyser can compute a parameter to be {beforeMark}, when in the method, at least one before-mark methods is called on the parameter.
+Similarly, the analyser can compute a parameter to be {beforeMark}, when in the method, at least one before-mark
+methods is called on the parameter.
 
-Finally, a field can even be {beforeMark}, when it is created or arrives in the type as {beforeMark}, and stays in this state.
+Finally, a field can even be {beforeMark}, when it is created or arrives in the type as {beforeMark}, and stays in
+this state.
 This situation must occur in a type with a {finalizer}, as explained in <<finalizers>>.
 
 === Extensions of annotations
 
-When a type is eventually level 1 immutable, should the field(s) of the state transition be {variable} or {final}?
-Similarly, when a type is eventually immutable, should the analyser mark the initially mutable or assignable fields {modified} or {nm}?
+When a type is eventually {finalFields}, should the field(s) of the state transition be marked {final}?
+Similarly, when a type is eventually immutable, should the analyser mark the initially mutable or assignable fields
+{modified} or {nm}?
 
-Basically, we propose to mark with the end state, qualifying with the parameter `after`:
+Basically, we propose to mark the end state, qualifying with the parameter `after`:
 
 [options=header]
 |===
 | property | not present | eventually | effectively
-| finality of field | {variable} | `@Final(after="mark")` | {final}
+| finality of field | no annotation, or `@Final(absent=true)` | `@Final(after="mark")` | {final}
 | non-modification of field | {modified} | `@NotModified(after="mark")` | {nm}
 |===
 
-Since in an IDE it is not too easy to have multiple visual markers, it seems best to use the same visuals as the end state.
+Since in an IDE it is not too easy to have multiple visual markers, it seems best to use the same visuals as the end
+state.
 
-When a type is effectively level 1 immutable (not eventually), all fields are effectively final.
-The analyser wants to emphasise the rules needed to obtain (eventual) immutability, by clearly indicating which fields break the immutability rules.
+When a type is effectively {finalFields} (not eventually), all fields are effectively final.
+The analyser wants to emphasise the rules needed to obtain (eventual) immutability, by clearly indicating which fields
+break the immutability rules.
 
 Eventual finality simply adds a `@Final(after="mark")` annotation to each of these situations.
 
 === Frameworks and contracts
 
 A fair number of Java frameworks introduce dependency injection and initializer methods.
-This concept is, in many cases, compatible with the idea of eventual immutability: once dependency injection has taken place, and an initializing method has been called, the framework stops intervening in the value of the fields.
+This concept is, in many cases, compatible with the idea of eventual immutability: once dependency injection has taken
+place, and an initializing method has been called, the framework stops intervening in the value of the fields.
 
-It is therefore not difficult to imagine, and implement in the analyser, a _before_ state (initialization still ongoing) and an _after_ state (initialization done) associated with the particular framework.
+It is therefore not difficult to imagine, and implement in the analyser, a _before_ state (initialization still ongoing)
+and an _after_ state (initialization done) associated with the particular framework.
 The example below shows how this could be done for the `Verticle` interface of the https://vertx.io[vertx.io framework^].
 
 .Example {counter:example}, excerpts and annotations of `Verticle.java` and `AbstractVerticle.java`
 [source]
 ----
-@FinalFields(after = "init")
+@FinalFields(after="init")
 interface Verticle {
 
     @Mark("init")
     void init(Vertx vertx, Context context);
 
-    @Only(after = "init")
+    @Only(after="init")
     Vertx getVertx();
 
-    @Only(after = "init")
+    @Only(after="init")
     void start(Promise<Void> startPromise) throws Exception;
 
-    @Only(after = "init")
+    @Only(after="init")
     void stop(Promise<Void> startPromise) throws Exception;
 }
 
@@ -288,6 +311,6 @@ public abstract class AbstractVerticle implements Verticle {
 }
 ----
 
-Currently, mid 2021, contracted eventual immutability has not been implemented yet in the analyser.
+Currently, contracted eventual immutability has not been implemented yet in the analyser.
 
 // ensure a newline at the end
