--- a/src/docs/asciidoc/road-to-immutability/090-other-annotations.adoc
+++ b/src/docs/asciidoc/road-to-immutability/090-other-annotations.adoc
@@ -328,14 +328,15 @@ We use the following criteria to designate a class as an extension:
 ****
 A class is an extension class of a type `E` when
 
-* the class is level 2 immutable;
+* the class is immutable;
 * all non-private static methods with parameters must have a {nn} 1st parameter of type `E`, the type being extended.
 There must be at least one such method;
 * non-private static methods without parameters must return a value of type `E`, and must also be {nn}.
 ****
 
 Static classes can be used to 'extend' closed types, as promoted by the https://www.eclipse.org/xtend/[Xtend^] project.
-Level 2 immutable classes can also play the role of extension facilitators, with the additional benefit of having some immutable data to be used as a context.
+Immutable classes can also play the role of extension facilitators, with the additional benefit of having some
+immutable data to be used as a context.
 
 Note that extension classes will often not be {container}, since the first parameter will be {modified} in many cases.
 
@@ -346,7 +347,8 @@ A singleton class is a class which has a mechanism to limit the creation of inst
 The term 'singleton' then refers to this unique instance.
 
 The {e2immu} analyser currently recognizes two systems for limiting the number of instances:
-the creation of an instance in a single static field with a static constructor, and a precondition on a constructor using a private static boolean field.
+the creation of an instance in a single static field with a static constructor, and a precondition on a constructor
+using a private static boolean field.
 
 An example of the first strategy is:
 
